deploy/minikube/config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipeline-builder
  labels:
    app.kubernetes.io/part-of: pipeline-builder
